https-load-balancing-with-ingress/fanout-ingress.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-1
  name: nginx-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-1
    spec:
      containers:
      - image: nginx
        name: nginx-1
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: nginx-conf    
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-1-index-html-configmap
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-1
  name: nginx-1
spec:
  ports:
  - port: 8080
    name: http
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-1
  type: NodePort
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-2
  name: nginx-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-2
    spec:
      containers:
      - image: nginx
        name: nginx-2
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: nginx-conf    
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-2-index-html-configmap
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-2
  name: nginx-2
spec:
  ports:
  - port: 8080
    name: http
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-2
  type: NodePort
status:
  loadBalancer: {}

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-1
            port:
              number: 8080
      - path: /v2/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-2
            port:
              number: 8080
